Completed team page

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <title>Document</title>
 </head>
 
-<body>
-    <div class="container">
+<div class="container">
+
+    <body>
         <header id="header">
             <nav id="nav">
                 <a id="welcome" href="index.html">Welcome</a>
@@ -37,41 +38,52 @@
         </section>
 
         <section id="bodyblock">
-            <p id="bodyp"><span class="strong">Share</span> and create long lasting memories of your travels. <span class="strong">Discover</span> new places and <span class="strong">meet</span> other expats along the way!</p>
+
+            <p id="bodyp">
+                <span class="strong">Share</span> and create long lasting memories of your travels. <span
+                    class="strong">Discover</span> new places and <span class="strong">meet</span> other expats along
+                the way!
+            </p>
 
             <div class="images">
+
                 <div class="img">
-                <img id="img1" src="https://images.unsplash.com/photo-1530521954074-e64f6810b32d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80" alt="Man sits in airport seat watching a plane take off with his feet propped on a suitcase." />
-                <h2>Store</h2>
-                <p>The perfect place to store and journal all your adventures.</p>
+                    <img id="img1"
+                        src="https://images.unsplash.com/photo-1530521954074-e64f6810b32d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80"
+                        alt="Man sits in airport seat watching a plane take off with his feet propped on a suitcase." />
+                    <h2>Store</h2>
+                    <p>The perfect place to store and journal all your adventures.</p>
                 </div>
-            <div class="img">
-                <img id="img2" src="https://images.unsplash.com/photo-1530616858450-99ba4525057d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80" alt="Woman wearing a hat stares up at a group of hot air balloons in the sky." />
-                <h2>Connect</h2>
-                <p>Connect with fellow expats and follow eachothers travels.</p>
-            </div>
-            <div class="img">
-                <img id="img3" src="https://images.unsplash.com/photo-1519885277449-12eee5564d68?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1502&q=80" alt="A map is in the foreground and beyond the map is looking out the windshield of a car as it drives throught a snowy field."
-                />
-                <h2>Create</h2>
-                <p>Create your own digital photo diary with the click of a button</p>
-            </div>
-            <div class="img">
-                <img id="img4" src="https://images.unsplash.com/photo-1448518184296-a22facb4446f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80" alt="Woman with orange backpack sits in the front of a kayak, in crystal blue water with a view of treelines and a blue sky."
-                />
-                <h2>Share</h2>
-                <p>Share all your memories with your friends and family.</p>
-            </div>
+                <div class="img">
+                    <img id="img2"
+                        src="https://images.unsplash.com/photo-1530616858450-99ba4525057d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80"
+                        alt="Woman wearing a hat stares up at a group of hot air balloons in the sky." />
+                    <h2>Connect</h2>
+                    <p>Connect with fellow expats and follow eachothers travels.</p>
+                </div>
+                <div class="img">
+                    <img id="img3"
+                        src="https://images.unsplash.com/photo-1519885277449-12eee5564d68?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1502&q=80"
+                        alt="A map is in the foreground and beyond the map is looking out the windshield of a car as it drives throught a snowy field." />
+                    <h2>Create</h2>
+                    <p>Create your own digital photo diary with the click of a button</p>
+                </div>
+                <div class="img">
+                    <img id="img4"
+                        src="https://images.unsplash.com/photo-1448518184296-a22facb4446f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80"
+                        alt="Woman with orange backpack sits in the front of a kayak, in crystal blue water with a view of treelines and a blue sky." />
+                    <h2>Share</h2>
+                    <p>Share all your memories with your friends and family.</p>
+                </div>
             </div>
         </section>
 
 
-    
-</body>
 
-<footer id="footer">
+    </body>
 
-    
-</footer>
+    <footer id="footer">
 
-</div> 
+
+    </footer>
+</div>
