--- a/team.html
+++ b/team.html
@@ -38,7 +38,7 @@
                         src="https://avatars3.githubusercontent.com/u/20474715?s=460&u=38996c063a165f1c835218e4ec2f7ba5795fed83&v=4"
                         alt="Picture of Buddy Agyin" /></a>
                 <h2>Buddy Agyin</h2>
-                <p>Aliquam tincidunt mauris eu risus.</p>
+                <p>Project Lead</p>
             </div>
 
             <div class="teamimg2">
@@ -46,7 +46,7 @@
                         src="https://avatars2.githubusercontent.com/u/15370405?s=460&u=4f8ce4d9052fbcac92b7b50a2e6114c392cc38f0&v=4"
                         alt="Picture of Zachary Peterson" /></a>
                 <h2>Zachary Peterson</h2>
-                <p>Aliquam tincidunt mauris eu risus.</p>
+                <p>React I Developer</p>
             </div>
 
             <div class="teamimg3">
@@ -54,7 +54,7 @@
                         src="https://ca.slack-edge.com/ESZCHB482-W014G4USE3T-203c463b7f54-512"
                         alt="Picture of Stacey Louis" /></a>
                 <h2>Stacey Louis</h2>
-                <p>Aliquam tincidunt mauris eu risus.</p>
+                <p>React I Developer</p>
             </div>
 
             <div class="teamimg4">
@@ -62,15 +62,7 @@
                         src="https://avatars2.githubusercontent.com/u/47903894?s=460&u=9f67a2b7aec0747e9b708d387c7bcbfcc7b0a3a9&v=4"
                         alt="Picture of Chris King" /></a>
                 <h2>Chris King</h2>
-                <p>Aliquam tincidunt mauris eu risus.</p>
-            </div>
-
-            <div class="teamimg5">
-                <a href="https://github.com/KristianCorrea"><img id="kristian"
-                        src="https://avatars0.githubusercontent.com/u/62035025?s=460&v=4"
-                        alt="Picture of Kristian Correa" /></a>
-                <h2>Kristian Correa</h2>
-                <p>Aliquam tincidunt mauris eu risus.</p>
+                <p>React II Developer</p>
             </div>
 
             <div class="teamimg6">
@@ -78,7 +70,15 @@
                         src="https://avatars0.githubusercontent.com/u/64489050?s=460&u=7ba41ef7e577172978574c7b11c77418b6ea60f3&v=4"
                         alt="Picture of Khwanchai Phaipha" /></a>
                 <h2>Khwanchai Phaipha</h2>
-                <p>Aliquam tincidunt mauris eu risus.</p>
+                <p>React II Developer</p>
+            </div>
+
+            <div class="teamimg5">
+                <a href="https://github.com/KristianCorrea"><img id="kristian"
+                        src="https://avatars0.githubusercontent.com/u/62035025?s=460&v=4"
+                        alt="Picture of Kristian Correa" /></a>
+                <h2>Kristian Correa</h2>
+                <p>Backend Developer</p>
             </div>
 
             <div class="teamimg7">
