--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
             <h1>About Expats</h1>
 
             <div class="aboutbody">
-                <div class="div1">
+                <div id="dsec1" class="div1">
                 <p>Expats has created a unique user experience. Don't worry about the hassle of limited character counts
                     or the inability to post images and your travel stories together -- sign up with us and do both!</p>
 
@@ -39,7 +39,7 @@
                     src="https://images.unsplash.com/photo-1441716844725-09cedc13a4e7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80"
                     alt="Man wearing jacket faces away from camera, staring out at water with mountains in the distance and a blue sky with pink clouds" />
             </div>
-            <div class="div1">
+            <div id="dsec2" class="div1">
                 <img class="aboutpics"
                     src="https://images.unsplash.com/photo-1454111782563-b8fbc05eacb2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1510&q=80"
                     alt="Man jumps from rope swing into green water below." />
@@ -48,7 +48,7 @@
                     along with your stories, the people you meet or places you go. You never know who you could inspire
                     to become a fellow expat!</p>
             </div>
-            <div class="div1">
+            <div id="dsec3" class="div1">
                 <p>With future updates you'll not only be able to upload just images, but your videos as well! Look
                     forward to other fun features such as location tagging, user and location searches, and even an
                     onboard photo editor!</p>
