Added login button

--- a/about.html
+++ b/about.html
@@ -60,4 +60,15 @@
 </div>
 </section>
 </body>
+
+<footer class="footer2">
+
+    <div class="social-buttons">
+        <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
+        <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+    </div>
+
+</footer>
 </div>
