--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <link rel="stylesheet" type="text/css" href="master.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
+    <title>Expat Project</title>
 </head>
 
 <div class="container">
@@ -33,7 +34,7 @@
             <h1>EXPATS</h1>
             <p>The <span class="strong">perfect</span> place to store all your travel memories.</p>
             <ul class="buttons stacked">
-                <li><a href="#main" class="explore">Explore More</a></li>
+                <li><a href="#main" class="explore">Login</a></li>
             </ul>
         </section>
 
@@ -82,8 +83,14 @@
 
     </body>
 
-    <footer id="footer">
+    <footer class="footer">
 
+        <div class="social-buttons">
+            <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
+            <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+        </div>
 
     </footer>
 </div>
