Added github logo to team

--- a/team.html
+++ b/team.html
@@ -34,59 +34,66 @@
             <h1>Meet the Team</h1>
 
             <div class="teamimg1">
-                <a href="https://github.com/agyin3"><img id="buddy"
+                <a href="https://github.com/agyin3" target="_blank"><img id="buddy"
                         src="https://avatars3.githubusercontent.com/u/20474715?s=460&u=38996c063a165f1c835218e4ec2f7ba5795fed83&v=4"
                         alt="Picture of Buddy Agyin" /></a>
                 <h2>Buddy Agyin</h2>
                 <p>Project Lead</p>
+                <a href="https://github.com/agyin3" target="_blank"><img id="github1" src="https://image.flaticon.com/icons/svg/25/25231.svg" alt="Github Logo" /></a>
             </div>
 
             <div class="teamimg2">
-                <a href="https://github.com/zachary-peterson"><img id="zachary"
+                <a href="https://github.com/zachary-peterson" target="_blank"><img id="zachary"
                         src="https://avatars2.githubusercontent.com/u/15370405?s=460&u=4f8ce4d9052fbcac92b7b50a2e6114c392cc38f0&v=4"
                         alt="Picture of Zachary Peterson" /></a>
                 <h2>Zachary Peterson</h2>
                 <p>React I Developer</p>
+                <a href="https://github.com/zachary-peterson" target="_blank"><img id="github2" src="https://image.flaticon.com/icons/svg/25/25231.svg" alt="Github Logo" /></a>
             </div>
 
             <div class="teamimg3">
-                <a href="https://github.com/StaceyLouis"><img id="stacey"
+                <a href="https://github.com/StaceyLouis" target="_blank"><img id="stacey"
                         src="https://ca.slack-edge.com/ESZCHB482-W014G4USE3T-203c463b7f54-512"
                         alt="Picture of Stacey Louis" /></a>
                 <h2>Stacey Louis</h2>
                 <p>React I Developer</p>
+                <a href="https://github.com/StaceyLouis" target="_blank"><img id="github3" src="https://image.flaticon.com/icons/svg/25/25231.svg" alt="Github Logo" /></a>
             </div>
 
             <div class="teamimg4">
-                <a href="https://github.com/Cking351"><img id="chris"
+                <a href="https://github.com/Cking351" target="_blank"><img id="chris"
                         src="https://avatars2.githubusercontent.com/u/47903894?s=460&u=9f67a2b7aec0747e9b708d387c7bcbfcc7b0a3a9&v=4"
                         alt="Picture of Chris King" /></a>
                 <h2>Chris King</h2>
                 <p>React II Developer</p>
+                <a href="https://github.com/Cking351" target="_blank"><img id="github4" src="https://image.flaticon.com/icons/svg/25/25231.svg" alt="Github Logo" /></a>
             </div>
 
             <div class="teamimg6">
-                <a href="https://github.com/khwanchaiwill"><img id="khwanchai"
+                <a href="https://github.com/khwanchaiwill" target="_blank"><img id="khwanchai"
                         src="https://avatars0.githubusercontent.com/u/64489050?s=460&u=7ba41ef7e577172978574c7b11c77418b6ea60f3&v=4"
                         alt="Picture of Khwanchai Phaipha" /></a>
                 <h2>Khwanchai Phaipha</h2>
                 <p>React II Developer</p>
+                <a href="https://github.com/khwanchaiwill" target="_blank"><img id="github5" src="https://image.flaticon.com/icons/svg/25/25231.svg" alt="Github Logo" /></a>
             </div>
 
             <div class="teamimg5">
-                <a href="https://github.com/KristianCorrea"><img id="kristian"
+                <a href="https://github.com/KristianCorrea" target="_blank"><img id="kristian"
                         src="https://avatars0.githubusercontent.com/u/62035025?s=460&v=4"
                         alt="Picture of Kristian Correa" /></a>
                 <h2>Kristian Correa</h2>
                 <p>Backend Developer</p>
+                <a href="https://github.com/KristianCorrea" target="_blank"><img id="github6" src="https://image.flaticon.com/icons/svg/25/25231.svg" alt="Github Logo" /></a>
             </div>
 
             <div class="teamimg7">
-                <a href="https://github.com/maycie-morris"><img id="maycie"
+                <a href="https://github.com/maycie-morris" target="_blank"><img id="maycie"
                         src="https://avatars1.githubusercontent.com/u/67204638?s=460&u=57c9c3585fd3326f80ce34c02cbb7939a3ddc0fa&v=4"
                         alt="Picture of Maycie Morris" /></a>
                 <h2>Maycie Morris</h2>
                 <p>Web UI Developer</p>
+                <a href="https://github.com/maycie-morris" target="_blank"><img id="github7" src="https://image.flaticon.com/icons/svg/25/25231.svg" alt="Github Logo" /></a>
             </div>
     
     </section>
