--- a/team.html
+++ b/team.html
@@ -100,6 +100,13 @@
     </div>
 </body>
 
-<!-- <footer>
+<footer class="footer3">
 
-</footer> -->
+    <div class="social-buttons">
+        <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
+        <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.github.com/" target="_blank"><i class="fab fa-github"></i></a>
+    </div>
+
+</footer>
