SM footer links

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
     <title>Expat Project</title>
 </head>
 
-<div class="container">
+
 
     <body>
+        <div class="container">
         <header id="header">
             <nav id="nav">
                 <a id="welcome" href="index.html">Welcome</a>
@@ -25,7 +26,7 @@
                         <a href="team.html">Team</a>
                     </div>
                 </div>
-                <a href="#" id="signup">Sign Up</a>
+                <a href="https://expat-journal-fawn.vercel.app/login" id="signup">Login</a>
 
             </nav>
         </header>
@@ -34,7 +35,7 @@
             <h1>EXPATS</h1>
             <p>The <span class="strong">perfect</span> place to store all your travel memories.</p>
             <ul class="buttons stacked">
-                <li><a href="#main" class="explore">Login</a></li>
+                <li><a href="https://expat-journal-fawn.vercel.app/signup" class="explore">Sign Up</a></li>
             </ul>
         </section>
 
@@ -79,18 +80,17 @@
             </div>
         </section>
 
+        <footer id="footer">
 
+            <div class="social-buttons">
+                <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
+                <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
+                <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.github.com/" target="_blank"><i class="fab fa-github"></i></a>
+            </div>
+    
+        </footer>
+    </div>
 
     </body>
 
-    <footer class="footer">
-
-        <div class="social-buttons">
-            <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
-            <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
-            <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
-            <a href="https://www.github.com/" target="_blank"><i class="fab fa-github"></i></a>
-        </div>
-
-    </footer>
-</div>
