--- a/about.html
+++ b/about.html
@@ -5,12 +5,14 @@
     <link rel="stylesheet" type="text/css" href="master.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
     <title>Document</title>
 </head>
 
-<div class="container3">
+
 
     <body>
+        <div class="container3">
         <header id="header">
             <nav id="nav">
                 <a id="welcome" href="index.html">Welcome</a>
@@ -23,7 +25,7 @@
                         <a href="team.html">Team</a>
                     </div>
                 </div>
-                <a href="#" id="signup">Sign Up</a>
+                <a href="https://expat-journal-fawn.vercel.app/login" id="signup">Login</a>
             </nav>
         </header>
 
@@ -59,16 +61,17 @@
             </div>
 </div>
 </section>
-</body>
 
-<footer class="footer2">
+<footer id="footer2">
 
     <div class="social-buttons">
         <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
         <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
         <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
-        <a href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+        <a href="https://www.github.com/" target="_blank"><i class="fab fa-github"></i></a>
     </div>
 
 </footer>
 </div>
+</body>
+
