--- a/team.html
+++ b/team.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="master.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
     <title>Document</title>
 </head>
 
@@ -24,7 +25,7 @@
                         <a href="team.html">Team</a>
                     </div>
                 </div>
-                <a href="#" id="signup">Sign Up</a>
+                <a href="https://expat-journal-fawn.vercel.app/login" id="signup">Login</a>
 
             </nav>
         </header>
@@ -98,15 +99,16 @@
     
     </section>
     </div>
+
+    <footer id="footer3">
+
+        <div class="social-buttons">
+            <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
+            <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.github.com/" target="_blank"><i class="fab fa-github"></i></a>
+        </div>
+    
+    </footer>
 </body>
 
-<footer class="footer3">
-
-    <div class="social-buttons">
-        <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
-        <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
-        <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
-        <a href="https://www.github.com/" target="_blank"><i class="fab fa-github"></i></a>
-    </div>
-
-</footer>
