Added titles to anchors for accessibility

--- a/about.html
+++ b/about.html
@@ -15,17 +15,17 @@
         <div class="container3">
         <header id="header">
             <nav id="nav">
-                <a id="welcome" href="index.html">Welcome</a>
+                <a id="welcome" title="Welcome" href="index.html">Welcome</a>
                 <div class="dropdown">
                     <span id="menu">Menu</span>
                     <div class="dropdown-content">
-                        <a href="about.html">About</a>
+                        <a title="About" href="about.html">About</a>
                         <br>
                         <br>
-                        <a href="team.html">Team</a>
+                        <a title="Team" href="team.html">Team</a>
                     </div>
                 </div>
-                <a href="https://expat-journal-fawn.vercel.app/login" id="signup">Login</a>
+                <a title="Sign_Up" href="https://expat-journal-fawn.vercel.app/login" id="signup">Login</a>
             </nav>
         </header>
 
@@ -65,10 +65,10 @@
 <footer id="footer2">
 
     <div class="social-buttons">
-        <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
-        <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
-        <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
-        <a href="https://www.github.com/" target="_blank"><i class="fab fa-github"></i></a>
+        <a title="Opens Facebook in a new tab." href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
+        <a title="Opens Twitter in a new tab." href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
+        <a title="Opens Instagram in a new tab." href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a title="Opens Github in a new tab." href="https://www.github.com/" target="_blank"><i class="fab fa-github"></i></a>
     </div>
 
 </footer>
