--- a/team.html
+++ b/team.html
@@ -14,18 +14,18 @@
 
         <header id="header">
             <nav id="nav">
-                <a id="welcome" href="index.html">Welcome</a>
+                <a title="Welcome" id="welcome" href="index.html">Welcome</a>
 
                 <div class="dropdown">
                     <span id="menu">Menu</span>
                     <div class="dropdown-content">
-                        <a href="about.html">About</a>
+                        <a title="About" href="about.html">About</a>
                         <br>
                         <br>
-                        <a href="team.html">Team</a>
+                        <a title="Team" href="team.html">Team</a>
                     </div>
                 </div>
-                <a href="https://expat-journal-fawn.vercel.app/login" id="signup">Login</a>
+                <a title="Login" href="https://expat-journal-fawn.vercel.app/login" id="signup">Login</a>
 
             </nav>
         </header>
@@ -40,7 +40,7 @@
                         alt="Picture of Buddy Agyin" /></a>
                 <h2>Buddy Agyin</h2>
                 <p>Project Lead</p>
-                <a href="https://github.com/agyin3" target="_blank"><img id="github1" src="https://image.flaticon.com/icons/svg/25/25231.svg" alt="Github Logo" /></a>
+                <a title="Opens Buddy's Github in a new tab." href="https://github.com/agyin3" target="_blank"><img id="github1" src="https://image.flaticon.com/icons/svg/25/25231.svg" alt="Github Logo" /></a>
             </div>
 
             <div class="teamimg2">
@@ -49,7 +49,7 @@
                         alt="Picture of Zachary Peterson" /></a>
                 <h2>Zachary Peterson</h2>
                 <p>React I Developer</p>
-                <a href="https://github.com/zachary-peterson" target="_blank"><img id="github2" src="https://image.flaticon.com/icons/svg/25/25231.svg" alt="Github Logo" /></a>
+                <a title="Opens Zachary's Github in a new tab." href="https://github.com/zachary-peterson" target="_blank"><img id="github2" src="https://image.flaticon.com/icons/svg/25/25231.svg" alt="Github Logo" /></a>
             </div>
 
             <div class="teamimg3">
@@ -58,7 +58,7 @@
                         alt="Picture of Stacey Louis" /></a>
                 <h2>Stacey Louis</h2>
                 <p>React I Developer</p>
-                <a href="https://github.com/StaceyLouis" target="_blank"><img id="github3" src="https://image.flaticon.com/icons/svg/25/25231.svg" alt="Github Logo" /></a>
+                <a title="Opens Stacey's Github in a new tab." href="https://github.com/StaceyLouis" target="_blank"><img id="github3" src="https://image.flaticon.com/icons/svg/25/25231.svg" alt="Github Logo" /></a>
             </div>
 
             <div class="teamimg4">
@@ -67,7 +67,7 @@
                         alt="Picture of Chris King" /></a>
                 <h2>Chris King</h2>
                 <p>React II Developer</p>
-                <a href="https://github.com/Cking351" target="_blank"><img id="github4" src="https://image.flaticon.com/icons/svg/25/25231.svg" alt="Github Logo" /></a>
+                <a title="Opens Chris's Github in a new tab." href="https://github.com/Cking351" target="_blank"><img id="github4" src="https://image.flaticon.com/icons/svg/25/25231.svg" alt="Github Logo" /></a>
             </div>
 
             <div class="teamimg6">
@@ -76,7 +76,7 @@
                         alt="Picture of Khwanchai Phaipha" /></a>
                 <h2>Khwanchai Phaipha</h2>
                 <p>React II Developer</p>
-                <a href="https://github.com/khwanchaiwill" target="_blank"><img id="github5" src="https://image.flaticon.com/icons/svg/25/25231.svg" alt="Github Logo" /></a>
+                <a title="Opens Khwanchai's Github in a new tab." href="https://github.com/khwanchaiwill" target="_blank"><img id="github5" src="https://image.flaticon.com/icons/svg/25/25231.svg" alt="Github Logo" /></a>
             </div>
 
             <div class="teamimg5">
@@ -85,7 +85,7 @@
                         alt="Picture of Kristian Correa" /></a>
                 <h2>Kristian Correa</h2>
                 <p>Backend Developer</p>
-                <a href="https://github.com/KristianCorrea" target="_blank"><img id="github6" src="https://image.flaticon.com/icons/svg/25/25231.svg" alt="Github Logo" /></a>
+                <a title="Opens Kristian's Github in a new tab." href="https://github.com/KristianCorrea" target="_blank"><img id="github6" src="https://image.flaticon.com/icons/svg/25/25231.svg" alt="Github Logo" /></a>
             </div>
 
             <div class="teamimg7">
@@ -94,7 +94,7 @@
                         alt="Picture of Maycie Morris" /></a>
                 <h2>Maycie Morris</h2>
                 <p>Web UI Developer</p>
-                <a href="https://github.com/maycie-morris" target="_blank"><img id="github7" src="https://image.flaticon.com/icons/svg/25/25231.svg" alt="Github Logo" /></a>
+                <a title="Opens Maycie's Github in a new tab." href="https://github.com/maycie-morris" target="_blank"><img id="github7" src="https://image.flaticon.com/icons/svg/25/25231.svg" alt="Github Logo" /></a>
             </div>
     
     </section>
@@ -103,10 +103,10 @@
     <footer id="footer3">
 
         <div class="social-buttons">
-            <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
-            <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
-            <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
-            <a href="https://www.github.com/" target="_blank"><i class="fab fa-github"></i></a>
+            <a title="Opens Facebook in a new tab." href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
+            <a title="Opens Twitter in a new tab." href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a title="Opens Instagram in a new tab." href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a title="Opens Github in a new tab." href="https://www.github.com/" target="_blank"><i class="fab fa-github"></i></a>
         </div>
     
     </footer>
