--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <a id="teamnav" title="Team" href="team.html">Team</a>
                     </div>
                 </div>
-                <a href="https://front-end-omega-red.vercel.app" id="signup" title="Login">Login</a>
+                <a href="https://front-end-omega-red.vercel.app" id="signup">Login</a>
 
                 <!-- javascript  -->
 
